--- a/assets/css/css.scss
+++ b/assets/css/css.scss
@@ -3,6 +3,7 @@
 @import "./_first.scss";
 @import "./_menu.scss";
 @import "./_home.scss";
+@import "./_call.scss";
 
 html {
     width: 100vw;
@@ -99,433 +100,3 @@ body {
     }
 }
 
-/* call */
-.call {
-
-    &-part1,
-    &-part2 {
-        position: absolute;
-        border-radius: 6px;
-    }
-
-    &-part1 {
-        top: calc((100% - 120px) / 5 * 2 + 60px);
-        left: 0;
-
-        .title {
-            img {
-                width: 100%;
-                height: auto;
-            }
-        }
-
-        .avantar {
-            position: absolute;
-            top: 5vh;
-            left: 50%;
-            transform: translateX(-50%);
-            background: #fff;
-            border-radius: 100%;
-
-            img {
-                padding: 3vh;
-                height: 10vh;
-                width: 10vh;
-            }
-        }
-
-        .name {
-            text-align: center;
-            margin: 9vh 3vw 0;
-            font-size: 3vh;
-            font-family: sh_b;
-        }
-
-        .id {
-            text-align: center;
-            margin: 3vh 3vw 0;
-            padding: 1vh;
-            font-size: 2vh;
-            font-family: sh_r;
-            background: rgba(61, 190, 0, 0.1);
-            border: 1px solid #3DBE00;
-            border-radius: 6px;
-            color: #3DBE00;
-        }
-
-        .user-screen {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            border-radius: 8px;
-
-            img {
-                width: 100%;
-                height: 100%;
-            }
-        }
-    }
-
-    &-part2 {
-        top: 0;
-        left: calc((100% - 150px) / 6 * 2 + 60px);
-        background: rgba(#026378, .7);
-        border-radius: 6px;
-
-        .img {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            border-radius: 6px;
-
-            img {
-                width: 100%;
-                height: 100%;
-            }
-        }
-
-        .msg {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-
-            .tx1,
-            .tx2 {
-                font-family: sh_r;
-                font-size: 2.5vh;
-                color: #fff;
-            }
-
-            .tx1 {
-                position: absolute;
-                top: 3vh;
-                left: 50%;
-                transform: translateX(-50%);
-            }
-
-            .tx2 {
-                position: absolute;
-                bottom: 3vh;
-                left: 50%;
-                transform: translateX(-50%);
-
-
-                span {
-                    font-size: 3.2vh;
-                    font-family: sh_b;
-                    vertical-align: middle;
-                    display: inline-block;
-                }
-
-                img {
-                    margin-right: .5vw;
-                    vertical-align: middle;
-                    display: inline-block;
-                    height: 4vh;
-                }
-            }
-        }
-
-        .back {
-            position: relative;
-            z-index: 9;
-            margin: 3vh 3vw;
-
-            img {
-                display: inline-block;
-                vertical-align: middle;
-                height: 2.5vh;
-                top: -.2vh;
-                position: relative;
-            }
-
-            span {
-                display: inline-block;
-                vertical-align: middle;
-                font-size: 2.5vh;
-                font-family: sh_r;
-                color: #fff;
-            }
-        }
-
-        .back.black {
-            span {
-                color: #1b1b1b;
-            }
-        }
-
-        .contact {
-            margin: 3vh 3vw;
-            text-align: center;
-
-            li {
-                position: relative;
-                margin: 3vh 1.5vw 3vh 1.5vw;
-                display: inline-block;
-                font-size: 0;
-
-                span {
-                    display: inline-block;
-                    height: 7.6vh;
-                    line-height: 7.6vh;
-                    font-size: 2.4vh;
-                    color: #1b1b1b;
-                    padding: 0 3.5vw;
-                    font-family: sh_r;
-                }
-
-                span.name {
-                    background: #E2E2E2;
-                    border-radius: 6px 0 0 6px;
-                    font-family: sh_b;
-                }
-
-                span.mobile {
-                    background: #fff;
-                    border-radius: 0 6px 6px 0;
-                }
-            }
-
-            li.current {
-                border: 2px solid #3DBE00;
-                border-radius: 8px;
-
-                span.name {
-                    background: #3DBE00;
-                    color: #fff;
-                }
-
-                span.name:before {
-                    content: '';
-                    position: absolute;
-                    top: 50%;
-                    transform: translateY(-50%);
-                    left: 1vw;
-                    width: 3vh;
-                    height: 3vh;
-                    background-image: url(../images/selected.png);
-                    background-repeat: no-repeat;
-                    background-size: 100% 100%;
-                }
-            }
-        }
-
-        .functions {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 28vh;
-            background: #fff;
-            text-align: center;
-
-            .fn {
-                margin: 5vh 1.2vw;
-                display: inline-block;
-                width: 12vw;
-                height: 12vh;
-                line-height: 12vh;
-                background: #3DBE00;
-                box-shadow: 0px 4px 8px rgba(61, 190, 0, 0.42);
-                border-radius: 6px;
-                text-align: center;
-
-                img {
-                    display: inline-block;
-                    vertical-align: middle;
-                    height: 2.8vh;
-                    width: auto;
-                    position: relative;
-                    top: -.2vh;
-                    margin-right: .5vw;
-                }
-
-                span {
-                    display: inline-block;
-                    vertical-align: middle;
-                    font-size: 2.5vh;
-                    font-family: sh_b;
-                    color: #fff;
-                }
-            }
-        }
-
-        .selected {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            bottom: 2vh;
-            z-index: 9;
-
-            i {
-                display: block;
-                width: 2vw;
-                height: .3vh;
-                background: #1b1b1b;
-                margin: 1vh auto;
-                border-radius: 8px;
-            }
-
-            span {
-                display: block;
-                font-size: 1.6vh;
-            }
-        }
-
-        .waitings,
-        .audio-calling,
-        .audio-msg {
-            position: relative;
-            z-index: 9;
-            margin: 10vh auto 0;
-            text-align: center;
-
-            p {
-                color: #fff;
-            }
-
-            p.info,
-            p.time {
-                font-size: 2vh;
-                font-family: sh_r;
-            }
-
-            p.name {
-                font-size: 2.5vh;
-                font-family: sh_b;
-                margin: 2vh 0;
-            }
-        }
-
-        .back+.audio-msg {
-            margin: 5vh auto 0;
-        }
-
-        .audio-calling,
-        .audio-msg {
-            p {
-                color: #1b1b1b;
-            }
-        }
-
-        .text-msg {
-            position: relative;
-            z-index: 9;
-            margin: 5vh auto 0;
-            width: 54vw;
-
-            textarea {
-                width: calc(100% - 4vw - 4px);
-                height: 36vh;
-                padding: 2vh 2vw;
-                border: 2px #BFBFBF solid;
-                background: rgba(#000, .05);
-                resize: none;
-                border-radius: 8px;
-                font-size: 2.5vh;
-                font-family: sh_r;
-                color: #1b1b1b;
-                line-height: 1.8;
-            }
-        }
-
-        .mask {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: #fff;
-            z-index: 1;
-        }
-
-        .audio-wave {
-            position: relative;
-            z-index: 9;
-            width: calc(100% - 24vw);
-            margin: 8vh 12vw 0;
-            height: 20vh;
-
-            img {
-                width: 100%;
-                height: 100%;
-            }
-        }
-
-        .customer-screen {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            border-radius: 8px;
-            z-index: 2;
-
-            img {
-                width: 100%;
-                height: 100%;
-            }
-        }
-
-        .mask+.cut {
-            span {
-                color: #1b1b1b;
-            }
-        }
-
-        .cut {
-            position: absolute;
-            bottom: 10vh;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 9;
-
-            img {
-                width: 6vh;
-                height: auto;
-            }
-
-            span {
-                display: block;
-                text-align: center;
-                font-size: 1.6vh;
-                color: #fff;
-                font-family: sh_r;
-                margin-top: 1vh;
-            }
-        }
-
-        .audio-fns {
-            position: absolute;
-            bottom: 10vh;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 9;
-
-            .fn {
-                display: inline-block;
-                margin: 0 1vw;
-
-                img {
-                    width: 6vh;
-                    height: auto;
-                }
-
-                span {
-                    display: block;
-                    text-align: center;
-                    font-size: 1.6vh;
-                    color: #1b1b1b;
-                    font-family: sh_r;
-                    margin-top: 1vh;
-                }
-            }
-        }
-    }
-}
